Fixed wrong color in navbar-inverse

--- a/css/spinsocial.css
+++ b/css/spinsocial.css
@@ -82,6 +82,6 @@ a.socialIcon:hover, .socialHoverClass {
 	transition: all 0.8s;
 }
 
-a {
+.social-network a {
  background-color: #D3D3D3;   
 }
